# technical-assessment-vortex

./: .coverage  Dockerfile  README.md  pyproject.toml  requirements.txt  work.drawio
.github/workflows/: lambda-pipeline.yml
kubernetes/: deployment.yaml
src/app/: app.py
src/tests/: app_tests.py
