[tool.poetry]
name = "technical-assessment-devops"
version = "1.0.0"
description = ""
authors = ["Guillaume Ros <guillaume.ros.pro@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.build]
optional = false

[tool.poetry.group.build.dependencies]
aws-sam-cli = "^1.119.0"

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ['ALL']
ignore = ['FA', 'D', 'S101', 'ANN', 'PLR', 'ARG', 'INP001', 'E501']

[tool.ruff.lint.per-file-ignores]
'tests/**' = ['S101', 'ANN', 'PLR', 'ARG', 'INP001', 'E501']

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
